# Etlas-API

./: .env.example  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
Article/: admin.py  models.py  serializers.py  urls.py  views.py
Article/migrations/: 0001_initial.py  0002_section_rename_title_articles_article_title_and_more.py  0003_remove_articles_section_section_article.py
api/: celery.py  settings.py  urls.py
articles/: admin.py  models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_article_monuments.py  0003_alter_article_options_article_created_and_more.py  0004_alter_article_options.py
authentication/: serializers.py  tasks.py  urls.py  views.py
contact_us/: models.py  serializers.py  tasks.py  urls.py  views.py
contact_us/migrations/: 0001_initial.py
favorites/: admin.py  models.py  serializers.py  urls.py  views.py
favorites/migrations/: 0001_initial.py  0002_alter_favorite_article_alter_favorite_monument.py
knowledge_check/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
monuments/: admin.py  models.py  serializers.py  urls.py  views.py
social_auth/: google.py  register.py  serializers.py  twitterhelper.py  urls.py  views.py
timeline/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
tours/: admin.py  models.py  serializers.py  urls.py  views.py
user_payment/: models.py  urls.py  views.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
(+34 files in other folders)
