[tool.poetry]
name = "etlas api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
django-storages = "^1.13.2"
pillow = "^9.4.0"
boto3 = "^1.26.94"
django-extensions = "^3.2.1"
b2sdk = "^1.20.0"
celery = "^5.2.7"
redis = "^4.5.3"
django-celery-results = "^2.5.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^3.14.0"
google-api-python-client = "^2.86.0"
facebook-sdk = "^3.1.0"
python-twitter = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
